--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,4 +206,5 @@
         Vino con Frutillas: Macerar frutillas con jarabe 30 min. Agregar hielo, vino y pisco.\n\n
         Ponche de Chirimoya: Macerar chirimoya con jarabe 30 min. Agregar hielo, vino y pisco.
     </string>
+    <string name="recetas_de_cocina_para_un_buen_n_18_de_septiembre_2025">Recetas de cocina para un buen \n 18 de Septiembre 2025</string>
 </resources>
